services/aredn-ntp/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-ntp
  namespace: aredn-ntp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-ntp
  egress:
    - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: kube-system
          k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
      toPorts:
      - ports:
          - port: "123"
            protocol: UDP
      - ports:
          - port: "5564"
            protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: aredn-ntp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn-ntp
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-ntp-app-ingress
  namespace: aredn-ntp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: aredn-ntp
      app.kubernetes.io/instance: aredn-ntp
      app.kubernetes.io/name: aredn-ntp
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: aredn-ntp-app
            tailscale.com/parent-resource-ns: aredn-ntp
      toPorts:
        - ports:
            - port: "123"
              protocol: UDP
